--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "main.js",
   "scripts":
   {
-    "start": "mongod --dbpath .dbcache & node main.js",
-    "test": "jasmine"
+    "start": "mongod --dbpath .dbcache & node main.js & react-scripts start",
+    "build": "react-scripts build",
+    "test": "jasmine & react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "author": "Adarsh Pastakia",
   "license": "ISC",
@@ -15,14 +17,17 @@
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "jasmine-spec-reporter": "^4.2.1",
     "mongodb": "^2.2.31",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-scripts": "1.0.13",
     "swagger-jsdoc": "^1.3.0",
     "uuid": "^3.1.0"
   },
   "devDependencies":
   {
     "jasmine": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "request": "^2.81.0"
   }
 }
