--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "main.js",
   "scripts":
   {
-    "start": "mongod --dbpath .dbcache & node main.js & react-scripts start",
+    "start": "npm run start-mongo & npm run start-node & npm run start-react",
+    "start-react": "react-scripts start",
+    "start-node": "node main.js",
+    "start-mongo": "mongod --dbpath .dbcache",
     "build": "react-scripts build",
     "test": "jasmine & react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
