--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -187,7 +187,7 @@
     "no-param-reassign": "off",
     "no-path-concat": "error",
     "no-plusplus": "off",
-    "no-process-env": "error",
+    "no-process-env": "off",
     "no-process-exit": "error",
     "no-proto": "off",
     "no-prototype-builtins": "off",
